# likecodex

./: .commit_counter  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART-FRONTEND.md  README.md  README.zh-CN.md  SECURITY.md  UI-COMPARISON.md  docker-compose.yml  frontend-upgrade-summary.md  pyproject.toml  quickstart.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: test-run-baseline.json
benchmarks/agent/: README.md  baseline.json  execution_bench.rs  memory_bench.rs  run.py  sandbox_bench.rs
benchmarks/cache/: README.md  baseline.json  run.py
benchmarks/tasks/: README.md
benchmarks/tasks/compaction/: verify.sh
benchmarks/tasks/fix-add-bug/: verify.sh
benchmarks/tasks/fix-add-bug/workspace/: add.py
benchmarks/tasks/fizzbuzz/: verify.sh
benchmarks/tasks/palindrome/: verify.sh
benchmarks/tasks/palindrome/workspace/: palindrome.py
benchmarks/tasks/subagent-delegation/: verify.sh
crates/likecodex-acp/: Cargo.toml
crates/likecodex-acp/src/: dispatch.rs  lib.rs  main.rs  persistence.rs  protocol.rs  server.rs  service.rs  transport.rs  vscode_adapter.rs
crates/likecodex-cli/: Cargo.toml
crates/likecodex-cli/src/: completions.rs  doctor.rs  engine.rs  interaction.rs  main.rs  output.rs  progress.rs  setup.rs  supervisor.rs  theme.rs  tui.rs  update.rs
crates/likecodex-core/: Cargo.toml
crates/likecodex-core/src/: config.rs  events.rs  lib.rs
crates/likecodex-desktop/: Cargo.toml  tauri.conf.json
crates/likecodex-desktop/src/: commands.rs  error_handler.rs  lib.rs  main.rs  process_manager.rs  updater.rs  window_manager.rs
crates/likecodex-executor/: Cargo.toml
crates/likecodex-executor/src/: lib.rs
crates/likecodex-ide-fs/: Cargo.toml
crates/likecodex-ide-fs/src/: filter.rs  lib.rs  operations.rs  reader.rs  search.rs  snapshot.rs  watcher.rs
crates/likecodex-indexer/: Cargo.toml
crates/likecodex-indexer/src/: lib.rs
crates/likecodex-sandbox/: Cargo.toml
crates/likecodex-sandbox/src/: audit.rs  docker.rs  fallback.rs  lib.rs  local_sandbox.rs  policy.rs
crates/likecodex-server/: Cargo.toml
crates/likecodex-server/src/: dto.rs  engine_bridge.rs  event_mapping.rs  main.rs  pty.rs  state.rs
crates/likecodex-server/src/middleware/: auth.rs  request_log.rs
crates/likecodex-server/src/routes/: chat.rs  health.rs  mod.rs  permissions.rs  sessions.rs  tasks.rs  terminal.rs
doc/: 01-架构精简方案.md  02-DeepSeek深度绑定方案.md  03-本地响应速度提升方案.md  04-DeepSeek专属工具链方案.md  05-用户体验简化方案.md  06-WebUI差异化优势方案.md  CHANGELOG_NEW.md
doc/ide-plan/: 01-IDE整体架构规划.md  02-工作区与项目管理.md  03-高级编辑器核心.md  04-AI代码补全与内联编辑.md  05-智能上下文与引用系统.md  06-多文件Composer.md  07-AI终端集成.md  08-调试与测试集成.md  09-版本控制UI.md  10-扩展与自定义系统.md
docker/sandbox/: Dockerfile
docker/server/: Dockerfile
docs/: API.md  ARCHITECTURE.md  CASE-STUDY.md  EVENTS.md  IMBOT.md  PARITY-CHECKLIST.md  RELEASE-v0.7.md  ROADMAP.md  SECURITY.md  SPEC-AGENT.md  SPEC-CACHE.md  USAGE.md  USER_GUIDE.md
scripts/: check-prerequisites.ps1  commit-history-continue.ps1  commit-history.ps1  commit-history.sh  dev.ps1  dev.sh  install.ps1  install.sh  likecodex-start.ps1  publish.sh  release.sh  smoke_test.py  start-desktop.ps1  start-full.ps1
services/imbot/: approval_bridge.py  main.py
tests/: test_agent_guards.py  test_agent_memory.py  test_agent_modes.py  test_auto_approval.py  test_cache_diagnostics.py  test_cache_first.py  test_cache_guard.py  test_cache_prefix.py  test_checkpoint_events.py  test_checkpoints.py  test_codegraph.py  test_commands.py  test_compact_loop.py  test_compaction_events.py  test_complete_step.py  test_composer.py  test_coordinator.py  test_deepseek_tools.py  test_dispatch.py  test_edit_file.py  test_empty_final.py  test_encoding.py  test_entrypoint_parity.py  test_evidence.py  test_grep_gitignore.py  test_handoff_guard.py  test_harness_integration.py  test_history_tool.py  test_loop_e2e.py  test_lsp_tools.py  test_mcp.py  test_mcp_management.py  test_memory.py  test_new_tools.py  test_openai_stream.py  test_output_notices.py  test_parallel_tasks.py  test_permission_events.py  test_permissions.py  test_plan_mode.py  (+17 more)
tests/benchmark/: framework.py  tasks.py
tests/e2e/: test_api_contract.py  test_full_stack.py  test_full_workflow.py  test_mcp_skills.py  test_simple_task.py
web/: fix_newlines.py  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.e2e.config.ts
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
web/src/components/: AgentActivity.tsx  AgentSidebar.tsx  AskModal.tsx  BackgroundTasks.tsx  BackgroundTasksDropdown.tsx  Chat.tsx  ChatHeader.tsx  CheckpointPanel.tsx  CodeGraphSearch.tsx  CollaborationPanel.tsx  CommandPalette.tsx  DiffViewer.tsx  EditorPanel.tsx  FileTree.tsx  GradientAvatar.tsx  IDELayout.tsx  IDESidebar.tsx  IDEToolbar.tsx  ImagePreview.tsx  InlineEditInput.tsx  LoadingSkeleton.tsx  Onboarding.tsx  PerformanceDashboard.tsx  PermissionModal.tsx  SessionContextMenu.tsx  SessionTabBar.tsx  SettingsPanel.tsx  SetupBanner.tsx  ShareDialog.tsx  ShortcutHelp.tsx  Sidebar.tsx  SkillPanel.tsx  StatusBar.tsx  StreamingEffects.tsx  TaskTimeline.tsx  ThemeProvider.tsx  Toast.tsx  ToolCallCard.tsx
web/src/components/Accessibility/: AccessibilityComponents.tsx  index.ts
web/src/components/AgentPanel/: AgentActivityTimeline.tsx  (+15 more)
web/src/hooks/: useAgentInteraction.ts  useAgentViewMode.ts  useAppInit.ts  useChatCore.ts  useChatLogic.ts  useEventSubscription.ts  useFileManagement.ts  useGlobalShortcuts.ts  useI18n.ts  useIdeChat.ts  useIdeInput.ts  useIdeSettings.ts  useLSP.ts  useMultiModalInput.ts  usePageLogic.ts
web/src/lib/: animations.ts  api.test.ts  api.ts  breakpoints.ts  i18n.ts  store.ts  utils.ts
web/src/store/: agentStore.ts
web/src/stores/: backgroundStore.ts  collaborationStore.ts  diffStore.ts  gitUIStore.ts  metricsStore.ts  sessionStore.ts
web/tests/: agent-panel.spec.tsx  test_hooks.ts  test_layout.tsx  test_shortcuts.ts
(+110 files in other folders)
