[workspace]
resolver = "2"

members = [
    "crates/likecodex-core",
    "crates/likecodex-executor",
    "crates/likecodex-cli",
    "crates/likecodex-server",
    "crates/likecodex-sandbox",
    "crates/likecodex-indexer",
    "crates/likecodex-desktop",
    "crates/likecodex-acp",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util", "net", "signal", "time"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
dirs = "5.0"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ignore = "0.4"
tree-sitter = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
