[project]
name = "likecodex"
version = "0.1.0"
description = "LikeCodex - DeepSeek V4 native AI coding assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "likecodex-engine",
    "rich>=13.0",
]

[project.scripts]
likecodex = "likecodex_engine.cli:main"

[project.optional-dependencies]
sandbox = [
    "docker>=6.0",
]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]
all = [
    "likecodex-engine[sandbox]",
    "likecodex-engine[memory]",
    "likecodex-engine[dev]",
]

[tool.setuptools.packages.find]
include = ["likecodex_engine*"]

[tool.setuptools.package-data]
likecodex_engine = ["static/*", "static/**/*", "prompts/*"]

[tool.uv.workspace]
members = ["packages/likecodex-engine"]

[tool.uv.sources]
likecodex-engine = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/likecodex-engine/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: full-stack tests requiring engine and Rust server",
]
