[project]
name = "likecodex"
version = "0.2.0"
description = "LikeCodex - DeepSeek V4 native AI coding assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "likecodex-engine",
]

[project.urls]
Homepage = "https://github.com/JasonBuildAI/likecodex"
Documentation = "https://github.com/JasonBuildAI/likecodex/tree/main/docs"
Repository = "https://github.com/JasonBuildAI/likecodex.git"
Issues = "https://github.com/JasonBuildAI/likecodex/issues"
Changelog = "https://github.com/JasonBuildAI/likecodex/blob/main/CHANGELOG.md"

[project.scripts]
likecodex-engine = "likecodex_engine.cli:main"
# Note: 'likecodex' CLI is provided by Rust binary; Python entrypoint renamed to avoid conflict

[project.classifiers]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
sandbox = [
    "docker>=7.0",
]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
]
all = [
    "likecodex-engine[sandbox]",
    "likecodex-engine[memory]",
    "likecodex-engine[dev]",
]

[tool.setuptools.packages.find]
include = ["likecodex_engine*"]

[tool.setuptools.package-data]
likecodex_engine = ["static/*", "static/**/*", "prompts/*"]

[tool.uv.workspace]
members = ["packages/likecodex-engine"]

[tool.uv.sources]
likecodex-engine = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG", "RUF"]

[tool.pytest.ini_options]
testpaths = ["packages/likecodex-engine/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: full-stack tests requiring engine and Rust server",
    "slow: tests that take longer than 5 seconds",
]
[tool.pytest.ini_options]
testpaths = ["packages/likecodex-engine/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: full-stack tests requiring engine and Rust server",
    "slow: tests that take longer than 5 seconds",
]

[tool.coverage.run]
source = ["likecodex_engine"]
omit = ["*/tests/*", "*/static/*"]
