[package]
name = "likecodex-acp"
version = "0.1.0"
edition = "2021"
description = "Agent Client Protocol (ACP) v1 implementation for LikeCodex"

[[bin]]
name = "likecodex-acp"
path = "src/main.rs"

[dependencies]
likecodex-core = { path = "../likecodex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }