[package]
name = "likecodex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "likecodex"
path = "src/main.rs"

[dependencies]
likecodex-core = { path = "../likecodex-core" }
likecodex-executor = { path = "../likecodex-executor" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
semver = { version = "1.0", features = [] }
