[package]
name = "likecodex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
