[package]
name = "likecodex-desktop"
version = "0.1.0"
description = "LikeCodex desktop shell (Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
tauri-plugin-updater = "2"
dirs-next = "2"

[lib]
name = "likecodex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "likecodex-desktop"
path = "src/main.rs"
