[package]
name = "likecodex-ide-fs"
version.workspace = true
edition.workspace = true

[dependencies]
likecodex-core = { path = "../likecodex-core" }
notify = { version = "7", features = ["macos_kqueue"] }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "time"] }
ignore = { workspace = true }
encoding_rs = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
glob = "0.3"
