[package]
name = "likecodex-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
likecodex-core = { path = "../likecodex-core" }
likecodex-executor = { path = "../likecodex-executor" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
