[package]
name = "likecodex-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "likecodex-server"
path = "src/main.rs"

[dependencies]
likecodex-core = { path = "../likecodex-core" }
likecodex-executor = { path = "../likecodex-executor" }
likecodex-sandbox = { path = "../likecodex-sandbox" }
serde = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
